new pug visuals

--- a/server/views/sample.pug
+++ b/server/views/sample.pug
@@ -1,8 +1,8 @@
-//- html 
-//-     head 
-//-         title= title
-//-     body
-//-         h1= message
+html 
+    head 
+        title= title
+    body
+        h1= message
 
 
 //- To view the page in the browser, you need to follow these steps:
