--- a/server/views/login.pug
+++ b/server/views/login.pug
@@ -4,7 +4,7 @@ html
         title Login
     body
         h1 Login
-        form(action="/login" method="post")
+        form(action="/login" method="post", onsubmit="window.location='/create-tasks-pug'; return false;")
             div
                 label(for="username") Username:
                 input(type="text" name="username" id="username" required)
