update pug templates 1

--- a/views/login.pug
+++ b/views/login.pug
@@ -13,3 +13,8 @@ html
                 input(type="password" name="password" id="password" required)
             div
                 button(type="submit") Login
+
+
+
+                //- Want to attach the bootrstap cdn here that Maria designed. 
+                
