--- a/views/login.pug
+++ b/views/login.pug
@@ -2,19 +2,26 @@ doctype html
 html
     head
         title Login
+        link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous")
+        style.
+            .full-width {
+                width: 100%;
+            }
     body
-        h1 Login
-        form(action="/login" method="post", onsubmit="window.location='/create-tasks-pug'; return false;")
-            div
-                label(for="username") Username:
-                input(type="text" name="username" id="username" required)
-            div
-                label(for="password") Password:
-                input(type="password" name="password" id="password" required)
-            div
-                button(type="submit") Login
+        .container.d-flex.align-items-center.justify-content-center.min-vh-100
+            .row.w-100
+                .col-md-6.d-flex.flex-column.align-items-center
+                    h1.text-center.mb-4 Login to your account
+                    form(action="/login" method="post", onsubmit="window.location='/create-tasks-pug'; return false;" class="full-width")
+                        div.mb-3
+                            label(for="username" class="form-label") Username:
+                            input(type="text" name="username" id="username" class="form-control full-width" required)
+                        div.mb-3
+                            label(for="password" class="form-label") Password:
+                            input(type="password" name="password" id="password" class="form-control full-width" required)
+                        .d-grid.gap-2
+                            button.btn.btn-primary(type="submit" class="full-width") Sign in
+                .col-md-6.d-flex.align-items-center.justify-content-center
+                    img(src="https://preview.redd.it/d34uc6cauqi11.png?auto=webp&s=3cec8ccb07189b57d2992d94b9774987ca8f3d5a" class="img-thumbnail w-100" alt="")
 
-
-
-                //- Want to attach the bootrstap cdn here that Maria designed. 
-                
+script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous")
