--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -11,7 +11,10 @@ html
                     tr
                         th(scope="col") Rank
                         th(scope="col") Teammates
-                        th(scope="col") Email
+                        th(scope="col") Number of tickets
+                        th(scope="col") In progress tickets
+                        th(scope="col") Done tickets
+                        th(scope="col") Score
                         th(scope="col") Team
                 tbody
                     if typeof users !== 'undefined' && users.length
@@ -21,10 +24,13 @@ html
                                 td
                                     img(src=user.image, alt='User Image', width='50', height='50', class='rounded-circle me-2')
                                     | #{user.firstName} #{user.lastName}
-                                td= user.email
+                                td= user.totalSprintTickets
+                                td= user.inProgressTickets
+                                td= user.doneTickets
+                                td= user.doneTickets * 100 / user.totalSprintTickets
                                 td= user.teamName ? user.teamName : 'No team'
                     else
                         tr
-                            td(colspan="4") No users found
+                            td(colspan="6") No users found
 
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous")
