--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -27,10 +27,15 @@ html
                                 td= user.totalSprintTickets
                                 td= user.inProgressTickets
                                 td= user.doneTickets
-                                td= user.doneTickets * 100 / user.totalSprintTickets
+                                td= (user.doneTickets * (user.tasks.filter(task => task.status === 'done').reduce((sum, task) => sum + task.complexity, 0) / user.doneTickets)) / user.totalSprintTickets * 100
                                 td= user.teamName ? user.teamName : 'No team'
                     else
                         tr
                             td(colspan="6") No users found
 
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous")
+
+
+
+//- Make rank based on high score 
+//- Make the graph above the table to calculate the score of each user like on figma
