--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -5,8 +5,13 @@ html
         link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous")
     body
         .container
-            h1 User Dashboard
-            table.table
+            h1.mb-4 User Dashboard
+            each user in users
+                div.d-flex.align-items-center.my-4
+                    img(src=user.image, alt='User Image', width='30', height='30', class='rounded-circle ms-2')
+                    div.progress.flex-grow-1.ms-3
+                        div.progress-bar(style=`width: ${user.doneTickets / user.totalSprintTickets * 100}%`, role="progressbar", aria-valuenow=`${user.doneTickets / user.totalSprintTickets * 100}`, aria-valuemin="0", aria-valuemax="100")
+            table.table.mt-4
                 thead
                     tr
                         th(scope="col") Rank
@@ -31,9 +36,10 @@ html
                                 td= user.teamName ? user.teamName : 'No team'
                     else
                         tr
-                            td(colspan="6") No users found
+                            td(colspan="7") No users found
 
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous")
+
 
 
 
