new user added plus tests

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -45,5 +45,7 @@ html
 
 
 
-//- Make rank based on high score 
-//- Make the graph above the table to calculate the number of tickets done versus the total number of tickets like on figma
+//- Make rank based on high score - Done
+//- Make the graph above the table to calculate the number of tickets done versus the total number of tickets like on figma - Done
+
+//- Score Formula: Number of done tickets: total amount * (complexity of those tickets (total number added)) / the total number of done tickets / total number of sprint tickets * 100
