--- a/views/register.pug
+++ b/views/register.pug
@@ -1,43 +1,42 @@
 doctype html
 html
     head
-        title Register
+        title User Account
         link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous")
-        style.
-            .full-width {
-                width: 100%;
-            }
     body
-        .container.d-flex.align-items-center.justify-content-center.min-vh-100
-            .row.w-100
-                .col-md-6.d-flex.flex-column.align-items-center
-                    h1.text-center.mb-4 Register your account
-                    form(action="/register" method="post" class="full-width")
-                        div.mb-3
-                            label(for="username" class="form-label") Username:
-                            input(type="text" name="username" id="username" class="form-control full-width" required)
-                        div.mb-3
-                            label(for="firstName" class="form-label") First Name:
-                            input(type="text" name="firstName" id="firstName" class="form-control full-width" required)
-                        div.mb-3
-                            label(for="lastName" class="form-label") Last Name:
-                            input(type="text" name="lastName" id="lastName" class="form-control full-width" required)
-                        div.mb-3
-                            label(for="email" class="form-label") Email:
-                            input(type="email" name="email" id="email" class="form-control full-width" required)
-                        div.mb-3
-                            label(for="image" class="form-label") Image URL:
-                            input(type="text" name="image" id="image" class="form-control full-width")
-                        div.mb-3
-                            label(for="role" class="form-label") Role:
-                            select(name="role" id="role" class="form-control full-width" required)
-                                option(value="user") user
-                                option(value="admin") admin
-                        div.mb-3
-                            label(for="password" class="form-label") Password:
-                            input(type="password" name="password" id="password" class="form-control full-width" required)
-                        .d-grid.gap-2
-                            button.btn.btn-primary(type="submit" class="full-width") Register
-                .col-md-6.d-flex.align-items-center.justify-content-center
-                    img(src="https://wallpapers.com/images/hd/naruto-anime-sakura-floating-rocks-bljm3wkng19ctpqy.jpg" class="img-thumbnail w-100" alt="")
+        .container(style="margin-top: 200px;")
+            .row.justify-content-center
+                .card(style="width: 18rem;")
+                    if user.image
+                        img.card-img-top(src=user.image alt="User Image")
+                    else
+                        img.card-img-top(src="default-image.jpg" alt="Default Image")
+                    .card-body
+                        h5.card-title #{user.username}
+                        p.card-text
+                            | First Name: #{user.firstName}
+                            br
+                            | Last Name: #{user.lastName}
+                            br
+                            | Email: #{user.email}
+                        ul.list-group.list-group-flush
+                            li.list-group-item #{'Email: ' + user.email}
+                            li.list-group-item #{'Role: ' + user.role}
+                            li.list-group-item #{'Current Team: ' + (user.team ? user.team.name : 'No team assigned')}
+                        .card-body
+                            form(action="/user-account-pug" method="post")
+                                div.mb-3
+                                    label(for="teamSelect" class="form-label") Select Team:
+                                    select#teamSelect.form-select(name="teamId")
+                                        if teams && teams.length > 0
+                                            each team in teams
+                                                option(value=team._id)= team.name
+                                        else
+                                            option No teams available
+                                button.btn.btn-primary(type="submit") Update Team
+                            a.card-link(href="/teams-pug") Create a Team
+                            a.card-link(href="/edit-account-pug") Edit Account 
+                            a.card-link(href="/create-tasks-pug") Create a Task 
 script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous")
+
+
