HUGE SUCCESS!!! User can now pick a team from the client side!!!!! :)

--- a/views/teams.pug
+++ b/views/teams.pug
@@ -12,7 +12,7 @@ html
             .row.w-100
                 .col-md-6.d-flex.flex-column.align-items-center
                     h1.text-center.mb-4 Create a Team
-                    form(action="/create-team" method="post" class="full-width")
+                    form(action="/teams-pug" method="post" class="full-width")
                         div.mb-3
                             label(for="teamName" class="form-label") Team Name:
                             input(type="text" name="teamName" id="teamName" class="form-control full-width" required)
