--- a/views/account.pug
+++ b/views/account.pug
@@ -6,8 +6,9 @@ html
         link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous")
 
     body
-        .container(style="margin-top: 200px;")
+        .container(style="margin-top: 20px;")
             .row.justify-content-center
+                // User information card
                 .card(style="width: 18rem;")
                     if user.image
                         img.card-img-top(src=user.image alt="User Image")
@@ -30,6 +31,7 @@ html
                         a.card-link(href="/edit-account-pug") Edit Account 
                         a.card-link(href="/create-tasks-pug") Create a Task 
 
+                // Task selection form
                 .card-body
                     form(action="/user-account-pug" method="post")
                         .mb-3
@@ -43,6 +45,22 @@ html
                         input(type="hidden" name="teamName" id="teamName" value=(user.teamID ? user.teamID.teamName : ''))
                         p#teamNamePlaceholder Team Name: #{user.teamID ? user.teamID.teamName : 'No team assigned'}
                         button.btn.btn-primary(type="submit") Assign Team
+
+                // Tasks list
+                .card(style="width: 100%; margin-top: 20px;")
+                    .card-body
+                        h5.card-title User Tasks
+                        if user.tasks && user.tasks.length > 0
+                            ul.list-group
+                                each task in user.tasks
+                                    li.list-group-item
+                                        h6 #{task.taskName}
+                                        p #{task.description}
+                                        p #{'Complexity: ' + task.complexity + ', Status: ' + task.status}
+                                        p #{'Assigned Date: ' + task.assignedDate.toDateString()}
+                                        p #{'Total Sprint Tickets: ' + user.totalSprintTickets + ', In Progress: ' + user.inProgressTickets + ', Done: ' + user.doneTickets}
+                        else
+                            p No tasks assigned
 
         script.
             function updateTeamName() {
