--- a/views/account.pug
+++ b/views/account.pug
@@ -4,72 +4,138 @@ html
         title #{title}
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous")
         link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous")
+        style.
+            body {
+                background-color: #f8f9fa;
+            }
+            .card {
+                border-radius: 10px;
+                box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            }
+            .card-title {
+                font-weight: bold;
+            }
+            .list-group-item {
+                background: #fff;
+                border-radius: 5px;
+            }
+            .btn-primary {
+                width: 100%;
+                font-weight: bold;
+            }
+            .team-selection {
+                background: #fff;
+                padding: 15px;
+                border-radius: 10px;
+                box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.1);
+            }
+            .tasks-container {
+                background: #fff;
+                padding: 20px;
+                border-radius: 10px;
+                box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.1);
+            }
 
     body
-        .container(style="margin-top: 20px;")
+        .container.py-5
             .row.justify-content-center
                 // User information card
-                .card(style="width: 18rem;")
-                    if user.image
-                        img.card-img-top(src=user.image alt="User Image")
-                    else
-                        img.card-img-top(src="default-image.jpg" alt="Default Image")
-                    .card-body
-                        h5.card-title #{user.username}
-                        p.card-text
-                            | First Name: #{user.firstName}
-                            br
-                            | Last Name: #{user.lastName}
-                            br
-                            | Email: #{user.email}
-                    ul.list-group.list-group-flush
-                        li.list-group-item #{'Email: ' + user.email}
-                        li.list-group-item #{'Role: ' + user.role}
-                        li.list-group-item #{'Current Team: ' + (user.teamID ? user.teamID.teamName : 'No team assigned')}
-                    .card-body
-                        a.card-link(href="/teams-pug") Create a Team
-                        a.card-link(href="/edit-account-pug") Edit Account 
-                        a.card-link(href="/create-tasks-pug") Create a Task 
+                .col-md-4
+                    .card
+                        if user.image
+                            img.card-img-top(src=user.image alt="User Image" style="border-top-left-radius: 10px; border-top-right-radius: 10px;")
+                        else
+                            img.card-img-top(src="/images/default-image.jpg" alt="Default Image")
+                        .card-body.text-center
+                            h5.card-title.text-primary #{user.username}
+                            p.card-text.mb-1
+                                strong First Name: 
+                                | #{user.firstName}
+                            p.card-text.mb-1
+                                strong Last Name: 
+                                | #{user.lastName}
+                            p.card-text.mb-1
+                                strong Email: 
+                                | #{user.email}
+                            ul.list-group.list-group-flush.mt-3
+                                li.list-group-item
+                                    strong Email:  
+                                    | #{user.email}
+                                li.list-group-item
+                                    strong Role:  
+                                    | #{user.role}
+                                li.list-group-item
+                                    strong Current Team:  
+                                    | #{user.teamName ? user.teamName : 'No team assigned'}
+                            .card-body.text-center
+                                a.btn.btn-outline-primary(href="/teams-pug") Create a Team
+                                a.btn.btn-outline-secondary(href="/edit-account-pug") Edit Account 
+                                a.btn.btn-outline-success(href="/create-tasks-pug") Create a Task 
 
-                // Task selection form
-                .card-body
-                    form(action="/user-account-pug" method="post")
-                        .mb-3
-                            label(for="teamSelect" class="form-label") Select Team
-                            select#teamSelect.form-select(name="teamId" onchange="updateTeamName()")
-                                if teams && teams.length > 0
-                                    each team in teams
-                                        option(value=team._id selected=(team._id.toString() === user.teamID._id.toString()))= team.teamName
-                                else
-                                    option No teams available
-                        input(type="hidden" name="teamName" id="teamName" value=(user.teamID ? user.teamID.teamName : ''))
-                        p#teamNamePlaceholder Team Name: #{user.teamID ? user.teamID.teamName : 'No team assigned'}
-                        button.btn.btn-primary(type="submit") Assign Team
+                // Team selection form
+                .col-md-4
+                    .team-selection
+                        h5.text-center.text-secondary Select Team
+                        form(action="/user-account-pug" method="post")
+                            .mb-3
+                                label(for="teamSelect" class="form-label") Choose your team:
+                                select#teamSelect.form-select(name="teamId")
+                                    if teams && teams.length > 0
+                                        each team in teams
+                                            option(
+                                                value=team._id 
+                                                selected=(user.teamID && user.teamID._id.toString() === team._id.toString())
+                                            ) #{team.teamName}
+                                    else
+                                        option No teams available
+                            input(type="hidden" name="teamName" id="teamName" value=(user.teamID && user.teamID.teamName ? user.teamID.teamName : ''))
+                            p.text-center.text-muted Team Name: <span id="teamNameText" class="fw-bold text-primary">#{user.teamName ? user.teamName : 'No team assigned'}</span>
+                            button.btn.btn-primary(type="submit") Assign Team
 
                 // Tasks list
-                .card(style="width: 100%; margin-top: 20px;")
-                    .card-body
-                        h5.card-title User Tasks
+                .col-md-6.mt-4
+                    .tasks-container
+                        h5.text-center.text-dark User Tasks
                         if user.tasks && user.tasks.length > 0
                             ul.list-group
                                 each task in user.tasks
                                     li.list-group-item
-                                        h6 #{task.taskName}
-                                        p #{task.description}
-                                        p #{'Complexity: ' + task.complexity + ', Status: ' + task.status}
-                                        p #{'Assigned Date: ' + task.assignedDate.toDateString()}
-                                        p #{'Total Sprint Tickets: ' + user.totalSprintTickets + ', In Progress: ' + user.inProgressTickets + ', Done: ' + user.doneTickets}
+                                        h6.text-dark #{task.taskName}
+                                        p.text-muted #{task.description}
+                                        p.text-info
+                                            strong Complexity:  
+                                            | #{task.complexity},  
+                                            strong Status:  
+                                            | #{task.status}
+                                        p.text-secondary
+                                            strong Assigned Date:  
+                                            | #{(task.assignedDate ? task.assignedDate.toDateString() : 'N/A')}
+                                        p.text-success
+                                            strong Sprint Progress:  
+                                            | #{user.totalSprintTickets} Total,  
+                                            | #{user.inProgressTickets} In Progress,  
+                                            | #{user.doneTickets} Done
                         else
-                            p No tasks assigned
+                            p.text-center.text-muted No tasks assigned
 
         script.
-            function updateTeamName() {
-                var teamSelect = document.getElementById('teamSelect');
-                var teamNameInput = document.getElementById('teamName');
-                var selectedOption = teamSelect.options[teamSelect.selectedIndex];
-                var teamNamePlaceholder = document.getElementById('teamNamePlaceholder');
-                teamNamePlaceholder.innerText = 'Team Name: ' + selectedOption.text;
-                teamNameInput.value = selectedOption.text;
-            }
+            document.addEventListener('DOMContentLoaded', function() {
+                const teamSelect = document.getElementById('teamSelect');
+                const teamNameInput = document.getElementById('teamName');
+                const teamNameText = document.getElementById('teamNameText');
+
+                teamSelect.addEventListener('change', function() {
+                    const selectedOption = teamSelect.options[teamSelect.selectedIndex];
+
+                    // Update the displayed team name
+                    teamNameText.innerText = selectedOption.text;
+                    teamNameInput.value = selectedOption.text;
+
+                    console.log(`Selected Team: ${selectedOption.text}`); // Debugging log
+                });
+            });
+
+
+
 
     
